2008-08-24  Frederic Peters  <fpeters@0d.be>

	* buildbot/master.cfg, jhbuild/buildbot/__init__.py,
	jhbuild/commands/bot.py: moved build master "unconfiguration" stuff
	out of master.cfg.

2008-08-24  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py, jhbuild/defaults.jhbuildrc, jhbuild/moduleset.py:
	download modulesets from svn.gnome.org by default, new option
	(use_local_modulesets) to use the local copy.

2008-08-24  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/scheduler.py: don't log every unrelated change
	notification.

2008-08-22  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/git.py: only use git <command>, no more
	git-<command>.

2008-08-22  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules,
	patches/mono.remove-arg_max-check.patch: added a patch for mono to
	build with newer libc.

2008-08-22  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules,
	patches/hicolor-icon-theme.clean-target.patch: added a patch to provide
	an empty clean target to hicolor-icon-theme, so building with makeclean
	on doesn't fail on this module.

2008-08-21  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: added ekiga configure flags for
	pwlib and opal that were lost in previous change.

2008-08-21  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: changed ekiga to checkout from
	subversion, from its stable gnome-2-22 branch.

2008-08-21  Frederic Peters  <fpeters@0d.be>

	* patches/waf-install.patch: updated waf patch to really work.

2008-08-20  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-external-deps-2.24.modules: Bump gnome-PolicyKit
	to 0.9.2 to get rid of an unwanted libsexy dependency. Also drop
	the gnome-vfs dependency, which is no longer needed.

2008-08-20  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* modulesets/gnome-2.24.modules: Update dependencies of banshee and 