@@ -1,5 +1,12 @@
 2008-08-24  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/bot.py: new --daemon option to get the server to
+	daemonize itself, and --pidfile option to specify the location to
+	write its PID; new --stop and --stop-server commands to stop a running
+	buildbot.
+
+2008-08-24  Frederic Peters  <fpeters@0d.be>
+
 	* buildbot/master.cfg, jhbuild/buildbot/__init__.py,
 	jhbuild/commands/bot.py: moved build master "unconfiguration" stuff
 	out of master.cfg.
